# blameless

./: .dir-locals.el  CHANGELOG.md  README.md  blameless.cabal  fourmolu.yaml
app/: Main.hs
app/Blameless/: Program.hs
src/Blameless/Effects/: Console.hs  FileSystem.hs  Git.hs
